--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
     background-color: #121212;
+    color: white;
 }
